--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 			<div class="ContentHeader" multi_id="player"><span class="HoverShowControl"><span class="ContentHeaderTitle">Player</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=player">Hardlink</a></span></span></div>
 			<div class="ContentBody">
 				<p>The script functions by embedding sounds or videos into a small player window inside the browser. This window can be resized, dragged across the screen, and customized to the user's liking.</p>
+				<p>Settings are accessed by the [<a>S</a>] link in the top right corner, hidden by default. For more information about the title bar buttons, check the <a class="InternalLink" href="#.?scroll=preview_images">preview images</a> section.</p>
 			</div>
 			<div class="ContentHeader" multi_id="sounds"><span class="HoverShowControl"><span class="ContentHeaderTitle">Sounds</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=sounds">Hardlink</a></span></span></div>
 			<div class="ContentBody">
