--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 	<div class="Content ContentWidth ContentActive" id="content_install">
 		<div class="FeaturesContainer">
 			<div class="Feature">
-				<a class="InternalLink FeatureLink" href="#about/userscript?scroll=sounds"><div class="TextIcon TextIconAudio"></div><span class="TextIconText FeatureText">Sound playback</span></a>
+				<a class="InternalLink FeatureLink" href="#about/userscript?scroll=youtube_vimeo"><div class="TextIcon TextIconYoutube"></div><span class="TextIconText FeatureText">Youtube +</span><div class="TextIcon TextIconVimeo TextIconPadLeft"></div><span class="TextIconText FeatureText">Vimeo</span></a>
 			</div><div class="Feature">
-				<a class="InternalLink FeatureLink" href="#about/userscript?scroll=youtube_vimeo"><div class="TextIcon TextIconYoutube"></div><span class="TextIconText FeatureText">Youtube +</span><div class="TextIcon TextIconVimeo TextIconPadLeft"></div><span class="TextIconText FeatureText">Vimeo playback</span></a>
+				<a class="InternalLink FeatureLink" href="#about/userscript?scroll=soundcloud"><div class="TextIcon TextIconSoundcloud"></div><span class="TextIconText FeatureText">Soundcloud</span></a>
 			</div><div class="Feature">
-				<a class="InternalLink FeatureLink" href="#about/userscript?scroll=links"><div class="TextIcon TextIconLink"></div><span class="TextIconText FeatureText">Link replacement</span></a>
+				<a class="InternalLink FeatureLink" href="#about/userscript?scroll=sounds"><div class="TextIcon TextIconAudio"></div><span class="TextIconText FeatureText">Sounds</span></a>
+			</div><div class="Feature">
+				<a class="InternalLink FeatureLink" href="#about/userscript?scroll=links"><div class="TextIcon TextIconLink"></div><span class="TextIconText FeatureText">Linkification</span></a>
 			</div>
 		</div>
 
@@ -135,7 +137,7 @@
 		<div class="ContentHeader"><span class="ContentHeaderTitle">About</span>:</div>
 		<div class="ContentBody">
 			<p>The userscript is designed primarily to be an extension to 4chan's image boards, but is designed with modularity in mind.</p>
-			<p>Currently it supports detecting and playing embedded .ogg Vorbis sounds in images, replacing inline URLs, playing Youtube videos, and playing Vimeo videos.</p>
+			<p>Currently it supports detecting and playing embedded .ogg Vorbis sounds in images, replacing inline URLs, playing Youtube videos, playing Vimeo videos, and playing Soundcloud sounds.</p>
 			<div class="ContentHeader"><span class="ContentHeaderTitle">Other Pages</span>:</div>
 			<div class="ContentBody">
 				<ul>
@@ -189,6 +191,13 @@
 					<li>Preview screenshots of videos can be viewed by hovering the link</li>
 					<li>This feature can be enabled/disabled in the player's settings page</li>
 					<li>Additionally, the size and hover time can be modified</li>
+				</ul>
+			</div>
+			<div class="ContentHeader" multi_id="soundcloud"><span class="HoverShowControl"><span class="ContentHeaderTitle">Soundcloud</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=soundcloud">Hardlink</a></span></span></div>
+			<div class="ContentBody">
+				<ul>
+					<li>In addition to videos and sounds, Soundcloud media can also be embedded</li>
+					<li>Soundcloud links are replaced similarly to Youtube/Video links</li>
 				</ul>
 			</div>
 			<div class="ContentHeader" multi_id="preview_images"><span class="HoverShowControl"><span class="ContentHeaderTitle">Preview Images</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=preview_images">Hardlink</a></span></span></div>
