--- a/index.html
+++ b/index.html
@@ -130,7 +130,12 @@
 			<p>The audio shouldn't be visible, but playback should still work.<span class="AudioTestContainer"></span></p>
 			<p id="audio_generate_p">Click <a href="#generate" class="AudioTestLink">generate</a> to start the test.</p>
 			<p id="audio_controls_p" style="display:none;"><a href="#play" class="AudioTestLink">play</a> / duration: <span id="audio_duration_span">0</span>s / seek: <span id="audio_time_span">0</span>s</p>
-			<p><div class="AudioTestLogTitle">Log:<span class="AudioTestLogSource"> (audio sampled from ZUN - "Romantic Children")</span></div><div class="AudioLogContainer"></div></p>
+			<p><div class="AudioTestLogTitle">Log:</div><div class="AudioLogContainer"></div></p>
+		</div>
+
+		<div class="ExtrasContainerPre"></div>
+		<div class="ExtrasContainer">
+			<div class="AudioTestSource">(audio sampled from ZUN - "Romantic Children")</div>
 		</div>
 	</div>
 	<div class="Content ContentWidth" id="content_source">
