--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 		<div class="ExtrasContainerPre"></div>
 		<div class="ExtrasContainer">
-			<div class="AudioTestSource">(audio sampled from ZUN - "Romantic Children")</div>
+			<div class="AudioTestSource">(audio sampled from: ZUN - <span class="AudioTestSourceName">Romantic Children</span>)</div>
 		</div>
 	</div>
 	<div class="Content ContentWidth" id="content_source">
