--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
 	<meta charset="UTF-8" />
+	<meta name="description" content="Youtube, Vimeo, Soundcloud, and Sounds playback" />
+	<meta name="keywords" content="4chan,sound,sounds,media,player,youtube,soundcloud,vimeo,embed,embedding,stego,steganography,4cs,dnsev,userscript,greasemonkey,tampermonkey,firefox,chrome" />
+	<meta name="author" content="dnsev" />
 	<link rel="shortcut icon" href="favicon.gif" />
 	<link rel="stylesheet" href="style.css" />
-	<title>dnsev / 4cs</title>
+	<title>dnsev / 4cs / 4chan Media Player</title>
 	<script src="jquery.js"></script>
 	<script src="script.js"></script>
 </head>
