--- a/index.html
+++ b/index.html
@@ -23,15 +23,19 @@
 <div class="TitleBorder"></div>
 <div class="ContentContainer">
 	<div class="Content ContentWidth ContentActive" id="content_install">
-		<div class="FeaturesContainer">
-			<div class="Feature">
-				<a class="InternalLink FeatureLink" href="#about/userscript?scroll=youtube_vimeo"><div class="TextIcon TextIconYoutube"></div><span class="TextIconText FeatureText">Youtube +</span><div class="TextIcon TextIconVimeo TextIconPadLeft"></div><span class="TextIconText FeatureText">Vimeo</span></a>
-			</div><div class="Feature">
-				<a class="InternalLink FeatureLink" href="#about/userscript?scroll=soundcloud"><div class="TextIcon TextIconSoundcloud"></div><span class="TextIconText FeatureText">Soundcloud</span></a>
-			</div><div class="Feature">
-				<a class="InternalLink FeatureLink" href="#about/userscript?scroll=sounds"><div class="TextIcon TextIconAudio"></div><span class="TextIconText FeatureText">Sounds</span></a>
-			</div><div class="Feature">
-				<a class="InternalLink FeatureLink" href="#about/userscript?scroll=links"><div class="TextIcon TextIconLink"></div><span class="TextIconText FeatureText">Linkification</span></a>
+		<div class="FeaturesContainerOuter">
+			<div class="FeaturesContainer">
+				<div class="Feature">
+					<a class="InternalLink FeatureLink" href="#about/userscript?scroll=youtube_vimeo"><div class="TextIcon TextIconYoutube"></div><span class="TextIconText FeatureText">Youtube +</span><div class="TextIcon TextIconVimeo TextIconPadLeft"></div><span class="TextIconText FeatureText">Vimeo</span></a>
+				</div><div class="Feature">
+					<a class="InternalLink FeatureLink" href="#about/userscript?scroll=soundcloud"><div class="TextIcon TextIconSoundcloud"></div><span class="TextIconText FeatureText">Soundcloud</span></a>
+				</div><div class="Feature">
+					<a class="InternalLink FeatureLink" href="#about/userscript?scroll=sounds"><div class="TextIcon TextIconAudio"></div><span class="TextIconText FeatureText">Sounds</span></a>
+				</div><div class="Feature">
+					<a class="InternalLink FeatureLink" href="#about/userscript?scroll=links"><div class="TextIcon TextIconLink"></div><span class="TextIconText FeatureText">Linkification</span></a>
+				</div><div class="Feature">
+					<a class="InternalLink FeatureLink" href="#about/userscript?scroll=uploader"><div class="TextIcon TextIconUpload"></div><span class="TextIconText FeatureText">Uploading</span></a>
+				</div>
 			</div>
 		</div>
 
@@ -219,6 +223,11 @@
 					<li>In addition to videos and sounds, Soundcloud media can also be embedded</li>
 					<li>Soundcloud links are replaced similarly to Youtube/Video links</li>
 				</ul>
+			</div>
+			<div class="ContentHeader" multi_id="uploader"><span class="HoverShowControl"><span class="ContentHeaderTitle">Uploader</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=uploader">Hardlink</a></span></span></div>
+			<div class="ContentBody">
+				<p>There is also a built in sound uploader which can be used to add, remove, or re-tag sounds in an image.</p>
+				<p>This can be particularly useful to re-tag all the images with the [1] tag. It can also auto-detect any sounds in the image you select to upload on the fly.</p>
 			</div>
 			<div class="ContentHeader" multi_id="preview_images"><span class="HoverShowControl"><span class="ContentHeaderTitle">Preview Images</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=preview_images">Hardlink</a></span></span></div>
 			<div class="ContentBody">
