--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div class="TitleContainer">
 	<div class="TitleContainerInner"><a class="Title" href="">4cs</a><div class="AuthorContainer"><a class="AuthorLink" href="https://github.com/dnsev">dnsev</a></div>
 	</div><div class="SubTitleSeparator">/</div><div class="TitleContainerInner"><div class="SubTitleContainer"><div class="SubTitle">4chan Media Player</div><a class="Version" href="#changes"></a></div>
-	<div class="SubTitleDescription"><a class="NavigationLink NavigationLinkCurrent" id="navigation_install" href="https://raw.github.com/dnsev/4cs/master/web/4cs.user.js">install</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink NavigationLinkCurrent" id="navigation_ogglify" href="https://raw.github.com/dnsev/4cs/master/web/4cs.user.js">ogglify</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_changes" href="changelog.txt">changes</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_issues" href="https://github.com/dnsev/4cs/issues">issues</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_source" href="https://github.com/dnsev/4cs">source</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_about" href="#about">about</a></div>
+	<div class="SubTitleDescription"><a class="NavigationLink NavigationLinkCurrent" id="navigation_install" href="https://raw.github.com/dnsev/4cs/master/web/4cs.user.js">install</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink NavigationLinkCurrent" id="navigation_ogglify" href="#ogglify">ogglify</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_changes" href="changelog.txt">changes</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_issues" href="https://github.com/dnsev/4cs/issues">issues</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_source" href="https://github.com/dnsev/4cs">source</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_about" href="#about">about</a><div class="NavigationLinkSeparator">/</div><a class="NavigationLink" id="navigation_oc" href="#oc">oc</a></div>
 	</div>
 </div>
 
@@ -44,7 +44,7 @@
 			<ol class="ContentInstructionList">
 				<li>If you don't have <a href="https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/" target="_blank">Greasemonkey</a> or <a href="https://addons.mozilla.org/en-us/firefox/addon/scriptish/" target="_blank">Scriptish</a> installed:<br />
 					<div class="ContentBodyInner">
-						<ol class="ContentInstructionList">
+						<ol class="ContentInstructionListUnordered">
 							<li>Install <a class="InfoLink" href="https://addons.mozilla.org/en-US/firefox/addon/greasemonkey/" target="_blank">Greasemonkey</a><span class="LinkInfo"> (preferred over Scriptish)</span></li>
 							<li>Restart your browser</li>
 						</ol>
@@ -59,7 +59,7 @@
 			<ol class="ContentInstructionList">
 				<li>If you don't have <a href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo" target="_blank">Tampermonkey</a> installed:<br />
 					<div class="ContentBodyInner">
-						<ol class="ContentInstructionList">
+						<ol class="ContentInstructionListUnordered">
 							<li>Install <a href="https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo" target="_blank">Tampermonkey</a></li>
 							<li>Restart your browser</li>
 						</ol>
@@ -126,7 +126,7 @@
 				<ul>
 					<li><a href="https://github.com/dnsev/4cs/raw/master/ogglify/ogglify.exe">ogglify.exe</a></li>
 					<li><a href="https://github.com/dnsev/4cs/raw/master/ogglify/ogglify-fast.bat">ogglify-fast.bat</a></li>
-					<li><a href="http://ffmpeg.zeranoe.com/builds/win32/static/ffmpeg-latest-win32-static.7z" target="_blank">ffmpeg.exe</a><span class="DownloadLinkExtension"> from <i>/bin/ffmpeg.exe</i><span class="Asterisk">*</span></span></li>
+					<li><a href="http://ffmpeg.zeranoe.com/builds/win32/static/ffmpeg-latest-win32-static.7z">ffmpeg.exe</a><span class="DownloadLinkExtension"> from <i>/bin/ffmpeg.exe</i><span class="Asterisk">*</span></span></li>
 				</ul>
 				<p class="AsteriskMessage">* <a href="http://www.ffmpeg.org/" target="_blank">ffmpeg</a> is not provided on this site as it is too large, and also not mine. If you want to get a version that isn't <i>32-bit static</i>, check their <a href="http://ffmpeg.zeranoe.com/builds/" target="_blank">downloads</a> page for Windows.</p>
 			</div>
@@ -523,6 +523,142 @@
 			<p><a href="https://github.com/ms11" target="_blank">ms11</a>: for the source code I originally modified.</p>
 			<p><a>Whoever</a>: for making the original sound formats for me to implement.</p>
 			<p>and <a>You</a>: for using the script.</p>
+		</div>
+	</div>
+	<div class="Content ContentWidth" id="content_oc">
+		<div class="ContentHeader"><span class="ContentHeaderTitle">Original Content</span>:</div>
+		<div class="ContentBody">
+			<p>So you want to create original content?<br />
+			Use these steps and images as a guide:</p>
+
+			<div class="ContentHeader" multi_id="sounds_image"><span class="HoverShowControl"><span class="ContentHeaderTitle">Creating the sounds-image</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=sounds_image">Hardlink</a></span></span></div>
+			<div class="ContentBody">
+			<ol class="SpacedList">
+				<li class="InstructionsImageLinkContainer">
+					<a class="ImageLink InstructionsImageLink" href="image_oc_guide0.png" href_update="#oc?activate=image_1" target="_blank" multi_id="image_1">image</a><div class="ImageDescription">
+						<ul>
+							<li>All 3 files downloaded into the folder</li>
+							<li>ffmpeg.exe hasn't been extracted yet</li>
+						</ul>
+					</div>
+
+					Download the <a class="InternalLink" href="#ogglify">ogglify</a> files into a new folder:
+					<ul class="ContentInstructionListUnordered ContentInstructionListSmall">
+						<li><a href="https://github.com/dnsev/4cs/raw/master/ogglify/ogglify.exe">ogglify.exe</a></li>
+						<li><a href="https://github.com/dnsev/4cs/raw/master/ogglify/ogglify-fast.bat">ogglify-fast.bat</a></li>
+						<li><a href="http://ffmpeg.zeranoe.com/builds/win32/static/ffmpeg-latest-win32-static.7z">ffmpeg.exe</a><span class="DownloadLinkExtension"> from <i>/bin/ffmpeg.exe</i></span></li>
+					</ul>
+
+					<div class="InstructionsImageLinkClear"></div>
+				</li>
+				<li class="InstructionsImageLinkContainer">
+					<a class="ImageLink InstructionsImageLink" href="image_oc_guide1.png" href_update="#oc?activate=image_2" target="_blank" multi_id="image_2">image</a><div class="ImageDescription">
+						<ul>
+							<li>ffmpeg.exe has now been extracted</li>
+							<li>If you don't have a program to extract from a .7z, visit <a href="http://www.7-zip.org/" target="_blank">7-zip.org</a></li>
+						</ul>
+					</div>
+
+					<p>Make sure you extract <a>ffmpeg.exe</a> from the .7z archive into your folder</p>
+
+					<div class="InstructionsImageLinkClear"></div>
+				</li>
+				<li class="InstructionsImageLinkContainer">
+					<a class="ImageLink InstructionsImageLink" href="image_oc_guide2.png" href_update="#oc?activate=image_3" target="_blank" multi_id="image_3">image</a><div class="ImageDescription">
+						<ul>
+							<li>Image file and sound file have been added to the folder</li>
+							<li>Sound files can be in .mp3, .flac, and other file types ffmpeg supports</li>
+						</ul>
+					</div>
+
+					<div>Put your image and any sound files you want to embed inside the folder</div>
+
+					<div class="InstructionsImageLinkClear"></div>
+				</li>
+				<li class="InstructionsImageLinkContainer">
+					<a class="ImageLink InstructionsImageLink" href="image_oc_guide3.png" href_update="#oc?activate=image_4" target="_blank" multi_id="image_4">image</a><div class="ImageDescription">
+						<ul>
+							<li>Dragging the image and sound onto <i>ogglify.exe</i></li>
+							<li>If you don't mind not getting the best sound quality, you can drag them onto <i>ogglify-fast.bat</i> instead</li>
+							<li>Also, the file name of your sound files will be used as the sound tag</li>
+						</ul>
+					</div>
+
+					<p>Select the image and sound file(s) and drag them onto <a class="InternalLink" href="#ogglify?scroll=setup">ogglify.exe</a></p>
+
+					<div class="InstructionsImageLinkClear"></div>
+				</li>
+				<li class="InstructionsImageLinkContainer">
+					<a class="ImageLink InstructionsImageLink" href="image_oc_guide4.png" href_update="#oc?activate=image_5" target="_blank" multi_id="image_5">image</a><div class="ImageDescription">
+						<ul>
+							<li>The command prompt shown working its magic</li>
+							<li>Typically takes a few seconds based on how big your sound is</li>
+						</ul>
+					</div>
+
+					A command prompt window should appear; sit back and let the magic happen
+
+					<div class="InstructionsImageLinkClear"></div>
+				</li>
+				<li class="InstructionsImageLinkContainer">
+					<a class="ImageLink InstructionsImageLink" href="image_oc_guide5.png" href_update="#oc?activate=image_6" target="_blank" multi_id="image_6">image</a><div class="ImageDescription">
+						<ul>
+							<li>A new file has been created</li>
+							<li>Note how it is much larger than the original</li>
+						</ul>
+					</div>
+
+					After the command prompt closes, you should have a new file named "<i>something</i>-embed<i>.png</i>"
+
+					<div class="InstructionsImageLinkClear"></div>
+				</li>
+			</ol>
+			</div>
+
+			<div class="ContentHeader" multi_id="posting"><span class="HoverShowControl"><span class="ContentHeaderTitle">Posting your image</span>:<span class="HoverShow"> <a class="InternalLink" href="#.?scroll=posting">Hardlink</a></span></span></div>
+			<div class="ContentBody">
+			<ol class="SpacedList" start="7">
+				<li class="InstructionsImageLinkContainer">
+					<a class="ImageLink InstructionsImageLink" href="image_oc_guide6.png" href_update="#oc?activate=image_7" target="_blank" multi_id="image_7">image</a><div class="ImageDescription">
+						<ul>
+							<li>The quick-box (using 4chan x) shown with the uploader panel open</li>
+							<li>If you haven't disabled it in the settings, the uploader panel should automatically open</li>
+							<li>However, it shouldn't matter if you use it or not</li>
+						</ul>
+					</div>
+
+					<p>Reply as you normally would to any thread, including your new image of course</p>
+
+					<div class="InstructionsImageLinkClear"></div>
+				</li>
+				<li class="InstructionsImageLinkContainer">
+					<a class="ImageLink InstructionsImageLink" href="image_oc_guide7.png" href_update="#oc?activate=image_8" target="_blank" multi_id="image_8">image</a><div class="ImageDescription">
+						<ul>
+							<li>The resulting image shown uploaded in a post; the filename has been preserved</li>
+							<li>The sounds link has been clicked and the sound is listed in the post</li>
+							<li>Note: if you change any of the fields in the uploader panel, your image will be re-encoded; if you're using Firefox, you may lose your filename</li>
+						</ul>
+					</div>
+
+					<p>Your image should be uploaded with the filename preserved</p>
+
+					<div class="InstructionsImageLinkClear"></div>
+				</li>
+				<li class="InstructionsImageLinkContainer">
+					<a class="ImageLink InstructionsImageLink" href="image_oc_guide8.png" href_update="#oc?activate=image_9" target="_blank" multi_id="image_9">image</a><div class="ImageDescription">
+						<ul>
+							<li>The sound shown being played in the player</li>
+						</ul>
+					</div>
+
+					<p>You can now load your sound-image in the player</p>
+
+					<div class="InstructionsImageLinkClear"></div>
+				</li>
+			</ol>
+			</div>
+
+			<div class="ContentHeader" multi_id="congratulations"><span class="ContentHeaderTitle">Congratulations</span>: You have posted original content!</div>
 		</div>
 	</div>
 </div>
