--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 				<li class="InstructionsImageLinkContainer">
 					<a class="ImageLink InstructionsImageLink" href="image_oc_guide6.png" href_update="#oc?activate=image_7" target="_blank" multi_id="image_7">image</a><div class="ImageDescription">
 						<ul>
-							<li>The quick-box (using 4chan x) shown with the uploader panel open</li>
+							<li>The quick reply box (using 4chan x) shown with the uploader panel open</li>
 							<li>If you haven't disabled it in the settings, the uploader panel should automatically open</li>
 							<li>However, it shouldn't matter if you use it or not</li>
 						</ul>
